[package]
name = "tennis"
version = "0.0.1-alpha"
authors = ["Allan Zhang <allanzhang7@gmail.com"]
description = "Tennis data structures"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/allan2/tennis/"
keyword = ["tennis"]
categories = ["data-structures"]

[dependencies]
